--- a/content/blog/compile_c_plus_plus_code_cross_platform.mdx
+++ b/content/blog/compile_c_plus_plus_code_cross_platform.mdx
@@ -7,9 +7,7 @@ tags: ["code", "c++", "linux", "windows"]
 published: true
 ---
 
-# compile.sh
-
-```sh
+```sh title="compile.sh"
 #!/bin/bash
 
 # Colors
