chore: 📝 update blog

--- a/content/blog/setting_up_zsh_with_oh-my-zsh.mdx
+++ b/content/blog/setting_up_zsh_with_oh-my-zsh.mdx
@@ -1,6 +1,6 @@
 ---
 title: Setting up Zsh with Oh-My-Zsh
-description: Setting up Zsh with Oh-My-Zsh and custom theme on Ubuntu
+description: Set up beautiful terminal using Zsh with Oh-My-Zsh and install custom theme and plugins
 date: 2024-04-02
 update: 2024-04-03
 tags: ["zsh", "oh-my-zsh", "ubuntu", "shell", "warp"]
@@ -18,9 +18,7 @@ published: true
 
 ## Supported Installation
 
-| Operating System | Tool |
-|:-|-:|
-| Ubuntu `22.04.2 LTS` | zsh `5.8.1` |
+This installation procedure is tested on Ubuntu 22.04.x LTS and x86_64 architecture.
 
 ## Note
 Each command is separate with a blank line, please execute them separately.
