chore: 📝 update blog

--- a/content/blog/docker/setting_up_pihole.mdx
+++ b/content/blog/docker/setting_up_pihole.mdx
@@ -69,4 +69,4 @@ systemctl restart systemd-resolved
 
 # Finishing
 
-Now that you've set up Pi-hole, you can log in using the `WEBPASSWORD` by opening your browser and go to `http://localhost/admin`.
+Now that you've set up Pi-hole, you can log in using the `WEBPASSWORD` by opening your browser and go to [http://localhost/admin](http://localhost/admin).
