--- a/content/blog/compile_c_plus_plus_code_cross_platform.mdx
+++ b/content/blog/compile_c_plus_plus_code_cross_platform.mdx
@@ -3,7 +3,7 @@ title: Compile C++ code cross platform
 description: A script to compile C++ code cross platform
 date: 2024-04-02
 update: 2024-04-03
-tags: ["code", "c++", "linux", "windows"]
+tags: ["script", "c++", "linux", "windows"]
 published: true
 ---
 
