feat(blog): add homebrew, wezterm, and font installation steps

--- a/content/blog/setting-up-zsh-with-oh-my-zsh-on-macos.mdx
+++ b/content/blog/setting-up-zsh-with-oh-my-zsh-on-macos.mdx
@@ -19,3 +19,26 @@ published: true
 ## Supported Installation
 
 This installation procedure is tested on macOS Sequoia (15.x) with Apple Silicon, but should be compatible with other macOS versions.
+
+# Installation
+
+## Install Homebrew
+If you haven't installed Homebrew yet, run the following command:
+
+```bash
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+
+## Install WezTerm
+WezTerm is a GPU-accelerated cross-platform terminal emulator and multiplexer.
+
+```bash
+brew install --cask wezterm
+```
+
+## Install Nerd Fonts
+Install `MesloLGS NF` font for the best Powerlevel10k experience.
+
+```bash
+brew install --cask font-meslo-lg-nerd-font
+```
